--- a/app/src/main/res/layout/activity_edit_image.xml
+++ b/app/src/main/res/layout/activity_edit_image.xml
@@ -11,216 +11,125 @@
         android:id="@+id/editImageRootView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
-        <!-- <android.support.constraint.Guideline
+          <!--<android.support.constraint.Guideline
              android:id="@+id/guideline"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              app:layout_constraintGuide_end="?attr/actionBarSize"
-             />-->
+             /> -->
 
         <RelativeLayout
             android:id="@+id/editImagetoolbarLayout"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp60"
-            android:layout_alignParentTop="true"
-            >
+            android:layout_height="@dimen/dp55"
 
-           <!-- <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:background="@color/color_theme"
-                android:weightSum="100">
-
-
-                <LinearLayout
-                    android:layout_weight="20"
-                    android:id="@+id/idEditImgBackLLayout"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="left|center"
-                    android:orientation="vertical"
-                    android:background="@drawable/custom_ripple"
-                    >
-
-                    <ImageView
-                        android:id="@+id/backEditImage"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:paddingTop="@dimen/dp5"
-                        android:paddingBottom="@dimen/dp5"
-                        android:paddingRight="@dimen/dp40"
-                        android:paddingLeft="@dimen/dp10"
-                        app:srcCompat="@drawable/svg_back"
-                        tools:ignore="VectorDrawableCompat" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="right|center"
-                    android:layout_weight="15"
-                    android:orientation="vertical"/>
-
-
-                <LinearLayout
-                    android:id="@+id/idEditImgUndoLayout"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="right|center"
-                    android:layout_weight="15"
-                    android:background="@drawable/custom_ripple"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/imgUndo"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:srcCompat="@drawable/ic_undo"
-                        tools:ignore="VectorDrawableCompat"
-                        />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:text="Undo"
-                        android:textColor="@color/color_icon"
-                        android:textStyle="bold" />
-                </LinearLayout>
-                <LinearLayout
-                    android:id="@+id/idEditImgRedoLayout"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="right|center"
-                    android:layout_weight="15"
-                    android:background="@drawable/custom_ripple"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/imgRedo"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:srcCompat="@drawable/ic_redo"
-                        tools:ignore="VectorDrawableCompat" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:text="Redo"
-                        android:textColor="@color/color_icon"
-                        android:textStyle="bold" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="right|center"
-                    android:layout_weight="10"
-                    android:orientation="vertical"/>
-
-
-                <LinearLayout
-                    android:id="@+id/idEditImgSaveLayout"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="right|center"
-                    android:layout_weight="25"
-                    android:orientation="vertical"
-                    android:background="@drawable/custom_ripple"
-                    android:visibility="visible" >
-
-                    <ImageView
-                        android:layout_marginTop="@dimen/dp10"
-                        android:id="@+id/imgSave"
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/dp25"
-                        app:srcCompat="@drawable/svg_save"
-                        tools:ignore="VectorDrawableCompat" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:text="Save"
-                        android:textColor="@color/color_icon"
-                        android:visibility="gone"
-                        />
-                </LinearLayout>
-
-
-
-
-
-
-            </LinearLayout>-->
-
-           <include
+            android:layout_alignParentTop="true">
+            <include
+                layout="@layout/toolbar_edit_image_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingLeft="@dimen/dp1"
-                android:paddingRight="@dimen/dp1"
-                layout="@layout/toolbar_edit_image_layout"/>
+                android:paddingRight="@dimen/dp1" />
         </RelativeLayout>
 
 
-        <RelativeLayout
-            android:id="@+id/idEditMainRLayout"
+        <LinearLayout
+            android:id="@+id/blankEditImageLayoutTop"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/dp7"
-            android:layout_above="@+id/editImageSubRecyclerLayout"
+            android:layout_height="@dimen/dp50"
             android:layout_below="@+id/editImagetoolbarLayout"
-            >
-            <ja.burhanrashid52.photoeditor.PhotoEditorView
-                android:id="@+id/photoEditorView"
+            android:background="@color/white"
+            android:orientation="vertical"
+            android:visibility="visible" >
+
+            <RelativeLayout
+                android:id="@+id/addhoster"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="visible"
-                android:scaleType="fitXY"
-                android:layout_centerInParent="true" />
+                android:layout_alignParentTop="true">
 
-            <ImageView
-                android:id="@+id/idMainFrameImageView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="0dp"
-                android:layout_marginTop="0dp"
-                android:scaleType="fitXY"
-                android:visibility="gone"/>
+                <RelativeLayout
+                    android:id="@+id/adMobView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
-        </RelativeLayout>
+                <LinearLayout
+                    android:id="@+id/banner_container"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:visibility="gone" />
+            </RelativeLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/editImageLLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/blankEditImageLayoutBottom"
+            android:layout_below="@+id/blankEditImageLayoutTop"
+            android:background="@color/white"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/dp5"
+            android:paddingTop="@dimen/dp2"
+            android:paddingRight="@dimen/dp5"
+            android:paddingBottom="@dimen/dp2"
+            >
 
+            <RelativeLayout
+                android:id="@+id/idEditMainRLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:gravity="center"
+                >
+                <ja.burhanrashid52.photoeditor.PhotoEditorView
+                    android:id="@+id/photoEditorView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="@color/white"
+                    android:scaleType="fitCenter"
+                    />
+            </RelativeLayout>
+            <!--android:layout_centerInParent="true"-->
+        </LinearLayout>
 
+        <!-- android:visibility="visible"
+        android:background="@drawable/ic_launcher_foreground"  -->
+
+        <LinearLayout
+            android:id="@+id/blankEditImageLayoutBottom"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_above="@+id/editImageSubRecyclerLayout"
+            android:background="@color/white"
+            android:orientation="vertical"
+            android:visibility="visible"/>
 
         <LinearLayout
             android:id="@+id/editImageSubRecyclerLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_above="@+id/editImageBootomLayout"
-            android:orientation="vertical"
             android:background="@color/white"
+            android:orientation="vertical"
             android:visibility="gone">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/stickersListRecycleView"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:paddingLeft="@dimen/dp1"
-            android:paddingRight="@dimen/dp1"
-            android:background="@color/color_selected"
-            android:orientation="horizontal"
-            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-            android:visibility="visible"
-            />
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/stickersListRecycleView"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@color/color_selected"
+                android:orientation="horizontal"
+                android:paddingLeft="@dimen/dp1"
+                android:paddingRight="@dimen/dp1"
+                android:visibility="visible"
+                app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
         </LinearLayout>
-
 
 
         <LinearLayout
@@ -228,37 +137,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rvConstraintTools"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/dp1"
-                android:paddingRight="@dimen/dp1"
                 android:background="@color/color_theme"
                 android:orientation="horizontal"
-                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-                android:visibility="visible"
-                />
-
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rvFilterView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:paddingLeft="@dimen/dp1"
                 android:paddingRight="@dimen/dp1"
-                android:background="@color/color_selected"
-                android:orientation="horizontal"
-                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-                app:layout_constraintTop_toTopOf="@+id/rvConstraintTools"
-                android:visibility="gone"
-                />
+                android:visibility="visible"
+                app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
+
         </LinearLayout>
 
     </RelativeLayout>
-
 
 </android.support.constraint.ConstraintLayout>
