--- a/app/src/main/res/layout/adjust_gallery_layout.xml
+++ b/app/src/main/res/layout/adjust_gallery_layout.xml
@@ -1,55 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center_vertical"
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/dp10"
+    android:paddingRight="@dimen/dp1"
+    android:background="@color/color_selected"
+    >
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="vertical"
-        android:paddingLeft="@dimen/dp10"
-        android:paddingRight="@dimen/dp1"
-         >
+        android:orientation="horizontal"
+        android:paddingBottom="@dimen/dp3"
+        android:paddingTop="@dimen/dp3"
+        android:weightSum="100">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingBottom="@dimen/dp10"
-            android:paddingTop="@dimen/dp7"
-            android:weightSum="100">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="@dimen/dp23"
+            android:drawableStart="@drawable/svg_brightness"
+            android:layout_weight="10"/>
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/svg_brightness"
-                android:layout_weight="10"/>
-
-            <SeekBar
-                android:id="@+id/galleryBrightness"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="90" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingBottom="@dimen/dp10"
-            android:paddingTop="@dimen/dp7"
-            android:weightSum="100">
-
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/svg_contrast"
-                android:layout_weight="10"/>
-
-            <SeekBar
-                android:id="@+id/galleryContrast"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="90" />
-        </LinearLayout>
-
-
+        <SeekBar
+            android:id="@+id/galleryBrightness"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/dp23"
+            android:layout_weight="90" />
     </LinearLayout>
+
+
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp30"
+        android:orientation="horizontal"
+        android:paddingBottom="@dimen/dp3"
+        android:paddingTop="@dimen/dp3"
+        android:weightSum="100">
+
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="@dimen/dp22"
+            android:drawableStart="@drawable/svg_contrast"
+            android:layout_weight="10"/>
+
+        <SeekBar
+            android:id="@+id/galleryContrast"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/dp22"
+            android:layout_weight="90" />
+    </LinearLayout>
+
+
+</LinearLayout>
