--- a/app/src/main/res/layout/fragment_add_text_dialog.xml
+++ b/app/src/main/res/layout/fragment_add_text_dialog.xml
@@ -22,6 +22,9 @@
         android:textColor="@color/color_icon"
         android:textSize="15sp" />
 
+
+
+
     <EditText
         android:id="@+id/add_text_edit_text"
         style="@style/EditText"
@@ -32,7 +35,16 @@
         android:background="@null"
         android:gravity="center"
         android:inputType="textMultiLine"
-        android:textSize="40sp" />
+        android:screenReaderFocusable="true"
+        android:textSize="40sp"
+        android:cursorVisible="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
+    <requestFocus />
+</EditText>
+
+
+
 
     <RelativeLayout
         android:id="@+id/add_text_color_picker_relative_layout"
