--- a/app/src/main/res/layout/frame_itemview.xml
+++ b/app/src/main/res/layout/frame_itemview.xml
@@ -18,7 +18,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/frame_12" />
+        tools:src="@drawable/collage_1_0" />
 
     <TextView
         android:id="@+id/idFrameItemViewText"
