--- a/app/src/main/res/layout/row_camera_edittools.xml
+++ b/app/src/main/res/layout/row_camera_edittools.xml
@@ -18,8 +18,7 @@
         android:id="@+id/cameraEditToolsImgView"
         android:layout_width="@dimen/dp25"
         android:layout_height="@dimen/dp25"
-        android:layout_margin="4dp"
-        android:layout_marginBottom="5dp"
+        android:layout_margin="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:src="@drawable/svg_camera_tool"
@@ -35,7 +34,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cameraEditToolsImgView"
         android:textSize="@dimen/dp9"
-        tools:text="@string/label_brush"
+        tools:text="@string/text_camera"
         android:textStyle="bold"/>
 
 </android.support.constraint.ConstraintLayout>
