--- a/app/src/main/res/layout/toolbar_edit_image_layout.xml
+++ b/app/src/main/res/layout/toolbar_edit_image_layout.xml
@@ -56,7 +56,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/imgUndo"
+                android:id="@+id/undoEditImageView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/ic_undo"
@@ -65,6 +65,7 @@
                 />
 
             <TextView
+                android:id="@+id/undoEditTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -72,6 +73,7 @@
                 android:textColor="@color/color_icon"
                 android:textStyle="bold" />
         </LinearLayout>
+
         <LinearLayout
             android:id="@+id/editImageRedoLayout"
             android:layout_width="0dp"
@@ -82,13 +84,14 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/imgRedo"
+                android:id="@+id/redoEditImageView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/ic_redo"
                 tools:ignore="VectorDrawableCompat" />
 
             <TextView
+                android:id="@+id/redoEditTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -106,6 +109,33 @@
 
 
         <LinearLayout
+            android:id="@+id/doneEditIamgeLayout"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="right|center"
+            android:layout_weight="15"
+            android:background="@drawable/custom_ripple"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/svg_done"
+                tools:ignore="VectorDrawableCompat" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Done"
+                android:textColor="@color/color_icon"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+
+
+
+        <LinearLayout
             android:id="@+id/editIamgeSaveLayout"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -113,7 +143,7 @@
             android:layout_weight="15"
             android:orientation="vertical"
             android:background="@drawable/custom_ripple"
-            android:visibility="visible" >
+            android:visibility="gone" >
 
             <ImageView
                 android:layout_marginTop="@dimen/dp10"
