--- a/app/src/main/res/layout/toolbar_gallery_layout.xml
+++ b/app/src/main/res/layout/toolbar_gallery_layout.xml
@@ -18,7 +18,7 @@
 
         <LinearLayout
             android:layout_weight="15"
-            android:id="@+id/idGalleryEditBackLLayout"
+            android:id="@+id/backGalleryLLayout"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="left|center"
@@ -39,17 +39,75 @@
 
 
 
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="right|center"
+            android:layout_weight="20"
+            android:orientation="vertical"/>
+
+        <LinearLayout
+            android:id="@+id/undoGalleryImageLayout"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="right|center"
+            android:layout_weight="15"
+            android:background="@drawable/custom_ripple"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/undoGalleryImageView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_undo"
+                tools:ignore="VectorDrawableCompat"
+                />
+
+            <TextView
+                android:id="@+id/undoGalleryTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Undo"
+                android:textColor="@color/color_icon"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/redoGalleryImageLayout"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="right|center"
+            android:layout_weight="15"
+            android:background="@drawable/custom_ripple"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/redoGalleryImageView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_redo"
+                tools:ignore="VectorDrawableCompat" />
+
+            <TextView
+                android:id="@+id/redoGalleryTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Redo"
+                android:textColor="@color/color_icon"
+                android:textStyle="bold" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="right|center"
-            android:layout_weight="65"
+            android:layout_weight="15"
             android:orientation="vertical"/>
 
-
         <LinearLayout
-            android:id="@+id/idGallerySaveLayout"
+            android:id="@+id/saveGalleryLayout"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="right|center"
@@ -60,7 +118,6 @@
 
             <ImageView
                 android:layout_marginTop="@dimen/dp10"
-                android:id="@+id/imgSave"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp25"
                 app:srcCompat="@drawable/svg_save"
@@ -76,13 +133,97 @@
                 />
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="right|center"
-            android:layout_weight="5"
-            android:orientation="vertical"/>
-
-
     </LinearLayout>
 </LinearLayout>
+
+
+    <!--
+    <?xml version="1.0" encoding="utf-8"?>
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp60"
+        android:background="@color/color_theme"
+        android:paddingTop="@dimen/dp5"
+        android:paddingBottom="@dimen/dp5">
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:weightSum="100">
+
+            <LinearLayout
+                android:layout_weight="15"
+                android:id="@+id/idGalleryEditBackLLayout"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="left|center"
+                android:orientation="vertical"
+                android:background="@drawable/custom_ripple"
+                >
+                <ImageView
+                    android:id="@+id/backGalleryImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="@dimen/dp5"
+                    android:paddingBottom="@dimen/dp5"
+                    android:paddingRight="@dimen/dp20"
+                    android:paddingLeft="@dimen/dp10"
+                    app:srcCompat="@drawable/svg_back"
+                    tools:ignore="VectorDrawableCompat" />
+            </LinearLayout>
+
+
+
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="right|center"
+                android:layout_weight="65"
+                android:orientation="vertical"/>
+
+
+            <LinearLayout
+                android:id="@+id/idGallerySaveLayout"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="right|center"
+                android:layout_weight="15"
+                android:orientation="vertical"
+                android:background="@drawable/custom_ripple"
+                android:visibility="visible" >
+
+                <ImageView
+                    android:layout_marginTop="@dimen/dp10"
+                    android:id="@+id/imgSave"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp25"
+                    app:srcCompat="@drawable/svg_save"
+                    tools:ignore="VectorDrawableCompat" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Save"
+                    android:textColor="@color/color_icon"
+                    android:visibility="gone"
+                    />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="right|center"
+                android:layout_weight="5"
+                android:orientation="vertical"/>
+
+
+        </LinearLayout>
+    </LinearLayout>
+    -->
