--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -72,12 +72,18 @@
     <dimen name="dp40">40dp</dimen>
     <dimen name="dp45">45dp</dimen>
     <dimen name="dp50">50dp</dimen>
+    <dimen name="dp55">55dp</dimen>
     <dimen name="dp35">35dp</dimen>
     <dimen name="dp32">32dp</dimen>
     <dimen name="dp30">30dp</dimen>
+    <dimen name="dp28">28dp</dimen>
+    <dimen name="dp27">27dp</dimen>
+    <dimen name="dp26">26dp</dimen>
     <dimen name="dp25">25dp</dimen>
+    <dimen name="dp24">24dp</dimen>
     <dimen name="dp23">23dp</dimen>
     <dimen name="dp22">22dp</dimen>
+    <dimen name="dp21">21dp</dimen>
     <dimen name="dp20">20dp</dimen>
     <dimen name="dp18">18dp</dimen>
     <dimen name="dp16">16dp</dimen>
@@ -97,7 +103,7 @@
     <dimen name="dp1">1dp</dimen>
     <dimen name="dp0">0dp</dimen>
 
-    <dimen name="selected_border_size">1dp</dimen>
+    <dimen name="selected_border_size">2dp</dimen>
     <dimen name="grid_expected_size">150</dimen>
 
 
