--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,9 +15,9 @@
 
     <style name="EditText">
         <item name="android:singleLine">true</item>
-        <item name="colorControlNormal">#FFFFFF</item>
-        <item name="colorControlActivated">#FFFFFF</item>
-        <item name="android:textColorPrimary">#FFFFFF</item>
+        <item name="colorControlNormal">#D81B60</item>
+        <item name="colorControlActivated">#D81B60</item>
+        <item name="android:textColorPrimary">#D81B60</item>
         <item name="android:textSize">14sp</item>
     </style>
 
